# dotfiles-andrew

./: .gitignore  .gitmodules  README.md  sync
dev-install/: install.sh
dev-install/Ubuntu-18.04/: install.sh
dotdir/bashrc.d/: 000-shopts.sh  002-prompt.sh  003-colors.sh  004-aliases.sh  005-bash-completion.sh  006-gcloud-sdk.sh  009-local-prefix.sh  010-ssh-auth-sock.sh  011-poetry.sh  016-ssh.sh  017-nix.sh
dotdir/emacs.d/: .gitignore
dotdir/emacs.d/lazy-loaded/: areusch-projects.el  c-gen.el  c-switch-decl-impl.el  count-words-region.el  go-mode.el  js2.elc  kill-buffers-in-dir.el  kite.el  magit.elc  projects.el  set-executable.el  tramp-projects.el  traverse-accessible-dirs.el  util.el  yank-push.el
dotdir/emacs.d/startup-eval/: .gitignore  autoloads.el  compile-advice.el  disable-exit.el  etc.el  keyboard-shortcuts.el  latex.el  org-agenda.el  packages.el  projectile.el  sconstruct.el  solarized.el  start-server.el  startup-requires.el  uniquify.el  update-autoloads.el  whitespace-hook.el
dotdir/emacs.d/startup-eval/os/: darwin.el
dotdir/emacs.d/startup-eval/style/: c.el
dotfiles/: bash_profile  bashrc  emacs  gitconfig  gitignore  screenrc  tmux.conf  tmux.conf.local
scripts/: 000-darwin-setup.sh  001-terminfo.sh  002-emacs-setup.sh  Brewfile
scripts/applescript/: zoom-accessibility
scripts/iterm2/: Andrew.plist  Pipfile  install.sh  pyproject.toml  set_profile.py
scripts/terminfo/: install.sh
scripts/terminfo/terms/: xterm-24bit  xterm-24bits
